--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
        <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
        <link rel="stylesheet" type="text/css" href="purrfect.css">
+       <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
     </head>
     <body>
         <nav class="navbar navbar-default">
@@ -28,8 +29,8 @@
                     <li><a href="">Contact</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Sign Up</a></li>
-                    <li><a href="#">Login</a></li>
+                    <li><a href="#">Sign Up <i class="fa fa-user-plus" aria-hidden="true"></i></a></li>
+                    <li><a href="#">Login <i class="fa fa-user" aria-hidden="true"></i></a></li>
                     
                 </ul>
               </div><!-- /.navbar-collapse -->
@@ -50,7 +51,7 @@
                         <h1>Purrfect Match</h1>
                         <h3>The Only Human-Feline Dating App</h3>
                         <hr>
-                        <button class="btn btn-default btn-lg">Get Started!</button>
+                        <button class="btn btn-default btn-lg"><i class="fa fa-paw" aria-hidden="true"></i> Get Started!</button>
                     </div>
             </div>
         </div>
